--- a/public/index-e.html
+++ b/public/index-e.html
@@ -54,7 +54,7 @@
                     <tbody>
                       <tr>
                         <td width="200" height="25" valign="middle" align="left" nowrap="nowrap">
-                        　<font color="#000066" size="-1">■</font> <a href="fornewcomer.html">For newcomers</a>
+                        　<font color="#000066" size="-1">■</font> <a href="fornewcomer">For newcomers</a>
                         </td>
                         <td width="200" rowspan="14" valign="top"><a href="equipment.html">
                           <img src="photo/topmenu_background.jpg" width="200" height="350"  border="0" alt="Our shack"></a>
