feat: update ALLJA1 35

--- a/public/allja1/index.html
+++ b/public/allja1/index.html
@@ -51,7 +51,7 @@
         <p>ALL JA1コンテストは、毎年6月の第4土曜日に行われている、1エリアを中心とした国内コンテストで、東京大学アマチュア無線クラブが主催しています。</p>
         <hr>
         <ul>
-        <li><a href="34rule.html">第34回ALLJA1コンテスト規約</a>　2022年3月25日公開</li>
+        <li><a href="35rule.html">第35回ALLJA1コンテスト規約</a>　2023年03月07日公開</li>
       </ul>
         <hr>
         <p>過去のコンテスト結果</p>
@@ -80,6 +80,7 @@
           <li><a href="31res.html">第31回ALLJA1コンテスト結果</a> </li>
 	  <li><a href="32res.html">第32回ALLJA1コンテスト結果</a> </li>
 	  <li><a href="33res.html">第33回ALLJA1コンテスト結果</a> </li>
+	  <li><a href="34res.html">第34回ALLJA1コンテスト結果</a> </li>
           <li><a href="ja1reco.html">ALLJA1コンテストのレコード（第11回までの規約 でのレコードです）</a>
           </li>
           <li>ALL JA1コンテストにも使用できる <a href="http://www.zlog.org/">コンテスト用ロギングソフトzlog</a> </li>
