verify garbled text

--- a/old_public/allja1/36rule.html
+++ b/old_public/allja1/36rule.html
@@ -205,7 +205,7 @@
               <ul>
                 全ての個人参加者は<b>自動的に</b>個人総合部門にも参加となる<br>
                 <br>
-                <font size="-1" color="red">A?Jの複数部門に参加している場合は、各周波数帯での交信局数の和とマルチプライヤーの和の積が総合部門の点数となる</font><br>
+                <font size="-1" color="red">A~Jの複数部門に参加している場合は、各周波数帯での交信局数の和とマルチプライヤーの和の積が総合部門の点数となる</font><br>
               </ul>
               <br>
             </ul>
