齟齬を減らす

--- a/old_public/allja1/36rule.html
+++ b/old_public/allja1/36rule.html
@@ -67,7 +67,7 @@
                   ZLO/100110 73 <br>
                   YWX/100105 73 <br>
                   </div></b>
-                  <font size="-1" color="blue">※ ソフトウェアの文字数の制限に従い、"CQ TEST"を"CQ TE"と略記してください</font>
+                  <font size="-1" color="blue">※ "CQ TE"はコンテスト（デジタル部門）の呼び出しです。ソフトウェアの文字数の制限の都合でこのような形としております</font>
                   <br>
                   <font size="-1" color="blue">※ ソフトウェアの文字数の制限に従い、コンテストナンバーを最後に参考のように送信してください</font>
                   <br>
@@ -75,7 +75,7 @@
                 <li> ログ記入上の注意
                   <ul>
                     <br>
-                    <li>実際の交信ではdBを交換しますが、ログのRST欄には"599"とご記入ください
+                    <li>交信ではdBを交換しますが、ログのRST欄には"599"とご記入ください
                     <br><br>
                     <li>.zloファイルを用いてデジタル部門の電子ログを提出する場合、モードを<b>「RTTY」</b>で代用して提出してください
                   </ul>
@@ -205,7 +205,7 @@
               <ul>
                 全ての個人参加者は<b>自動的に</b>個人総合部門にも参加となる<br>
                 <br>
-                <font size="-1" color="red">A~Jの複数部門に参加している場合は、各周波数帯での交信局数の和とマルチプライヤーの和の積が総合部門の点数となる</font><br>
+                <font size="-1" color="red">A?Jの複数部門に参加している場合は、各周波数帯での交信局数の和とマルチプライヤーの和の積が総合部門の点数となる</font><br>
               </ul>
               <br>
             </ul>
@@ -465,7 +465,7 @@
                 <b>・1エリア外部門</b>…RS(T)+府県支庁ナンバー<br>
                 <br>
                 <font size="-1" color="red">（東京都特別区、横浜、川崎、相模原、千葉、さいたま市は区番号）</font><br>
-                <font size="-1" color="red">デジタル部門についてはdBを交換し、ログのRST欄には"599"とご記入ください</font><br>
+                <font size="-1" color="red">デジタル部門についてはdBと市郡区ナンバー（1エリア内部門）または府県支庁ナンバー（1エリア外部門）を交換し、ログのRST欄には"599"とご記入ください</font><br>
               </ul>
               <br>
             </ul>
