--- a/old_public/allja1/index.html
+++ b/old_public/allja1/index.html
@@ -82,6 +82,7 @@
 	        <li><a href="33res.html">第33回ALLJA1コンテスト結果</a> </li>
 	        <li><a href="34res.html">第34回ALLJA1コンテスト結果</a> </li>
           <li><a href="35res.html">第35回ALLJA1コンテスト結果</a> </li>
+		<li><a href="36res.html">第36回ALLJA1コンテスト結果</a> </li>
           <li><a href="ja1reco.html">ALLJA1コンテストのレコード（第11回までの規約 でのレコードです）</a>
           </li>
           <li>ALL JA1コンテストにも使用できる <a href="http://www.zlog.org/">コンテスト用ロギングソフトzlog</a> </li>
